// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Check Box Check Box 1`] = `
<div
  className="selector my-checkbox-class"
>
  <input
    aria-label="Label"
    checked={true}
    disabled={false}
    id="myCheckBoxId"
    name="myCheckBoxName"
    onChange={[Function]}
    readOnly={true}
    type="checkbox"
    value="label"
  />
  <label
    className=""
    htmlFor="myCheckBoxId"
  >
    <span
      className="checkmark"
    />
    <span
      className="selector-label"
    >
      Label
    </span>
  </label>
</div>
`;

exports[`Storyshots Check Box Check Box Group 1`] = `
<div
  checked={true}
  className="checkbox-group vertical"
  defaultChecked={
    Array [
      "First",
    ]
  }
  role="group"
>
  <div
    className="selector"
  >
    <input
      checked={false}
      disabled={false}
      id="test-1"
      name="group"
      onChange={[Function]}
      readOnly={true}
      type="checkbox"
      value="First"
    />
    <label
      className=""
      htmlFor="test-1"
    >
      <span
        className="checkmark"
      />
      <span
        className="selector-label"
      >
        First
      </span>
    </label>
  </div>
  <div
    className="selector"
  >
    <input
      checked={false}
      disabled={false}
      id="test-2"
      name="group"
      onChange={[Function]}
      readOnly={true}
      type="checkbox"
      value="Second"
    />
    <label
      className=""
      htmlFor="test-2"
    >
      <span
        className="checkmark"
      />
      <span
        className="selector-label"
      >
        Second
      </span>
    </label>
  </div>
  <div
    className="selector"
  >
    <input
      checked={false}
      disabled={false}
      id="test-3"
      name="group"
      onChange={[Function]}
      readOnly={true}
      type="checkbox"
      value="Third"
    />
    <label
      className=""
      htmlFor="test-3"
    >
      <span
        className="checkmark"
      />
      <span
        className="selector-label"
      >
        Third
      </span>
    </label>
  </div>
</div>
`;
